fix misalign panels when freee message is too long

--- a/assets/sass/admin.scss
+++ b/assets/sass/admin.scss
@@ -242,3 +242,8 @@
 .option-booking {
   line-height: 30px !important;
 }
+
+.frozen-message {
+  height: 54px;
+  overflow-y: scroll;
+}
